[package]
name = "tokio-retry"
version = "0.3.1"
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/djc/tokio-retry"
documentation = "https://docs.rs/tokio-retry"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2018"
rust-version = "1.85"

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
rand = { version = "0.10.1", default-features = false, features = ["thread_rng"], optional = true }
tokio = { version = "1.0", features = ["time"] }
pin-project-lite = "0.2.16"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
cloned_instead_of_copied = "warn"
manual_let_else = "warn"
or_fun_call = "warn"
std_instead_of_core = "warn"
upper_case_acronyms = "warn"
use_self = "warn"
